# radar

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  setup.sh
data/: heldout.json
data/seed_repo/: utils.py
demo/: README.md  arm_con.sh  arm_sin.sh  compare.py  compare_prueba.py  gen_big_repo.py  gen_test_repo.py  run_ab.sh  run_prueba.sh  scripted_demo.sh  show_tokens.py  task.md  task_prueba.md  workspace_CLAUDE.md  workspace_CLAUDE_con.md  workspace_CLAUDE_prompted.md  workspace_CLAUDE_sin.md
docs/resumenes/: 001-skeleton.md  002-extract.md  003-normalize.md  004-embed.md  005-index.md  006-engine.md  007-seed-data.md  008-eval.md  009-mcp-server.md  010-cli.md  011-tests.md
docs/stories/: story-001-parser.md  story-001-skeleton.md  story-002-embeddings.md  story-002-extract.md  story-003-index.md  story-003-normalize.md  story-004-embed.md  story-004-mcp-server.md  story-005-find-similar-function.md  story-005-index.md  story-006-engine.md  story-007-seed-data.md  story-008-eval.md  story-009-mcp-server.md  story-010-cli.md  story-011-tests.md
radar/: __init__.py  cli.py  embeddings.py  index.py  models.py  parser.py  server.py
radar/adapters/: cli.py  mcp_server.py
radar/engine/: build.py  config.py  embed.py  engine.py  extract.py  index.py  models.py  normalize.py
radar/eval/: eval.py
tests/: test_contract.py  test_determinism.py  test_embed.py  test_embeddings.py  test_engine.py  test_extract.py  test_index.py  test_integration.py  test_normalize.py  test_parser.py  test_server.py  test_smoke.py
tests/fixtures/: SampleService.java
(+9 files in other folders)
