[project]
name = "radar"
version = "0.1.0"
description = "Semantic recall layer that prevents AI agents from duplicating logic that already exists in your codebase."
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "mcp>=1.27.2",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
radar = "radar.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
