[project]
name = "radar"
version = "0.1.0"
description = "Semantic recall layer that prevents AI agents from duplicating logic that already exists in your codebase."
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "sentence-transformers>=3.0.0",
    "transformers>=4.36.0,<5.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
]

[project.scripts]
radar = "radar.adapters.cli:main"
radar-eval = "radar.eval.eval:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
